force-app/main/default/objects/InSituCah__Ultimate_Parent__c/InSituCah__Ultimate_Parent__c.object-meta.xml
<CustomObject>
    <description>An iTools Customizable Account Hierarchy custom object used to connect all accounts that are part of the same account family or hierarchy.</description>
    <label>Ultimate Parent</label>
    <nameField>
        <displayFormat>UP-{00000000}</displayFormat>
        <label>Ultimate Parent Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ultimate Parents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>