force-app/main/default/objects/InSituCah__Ultimate_Parent__c/fields/InSituCah__Account__c.field-meta.xml
<CustomField>
    <fullName>InSituCah__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Ultimate Parents</relationshipLabel>
    <relationshipName>Ultimate_Parents</relationshipName>
    <type>Lookup</type>
</CustomField>