force-app/main/default/objects/InSituCah__Ultimate_Parent__c/fields/InSituCah__Account_Name__c.field-meta.xml
<CustomField>
    <fullName>InSituCah__Account_Name__c</fullName>
    <formula>InSituCah__Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>