force-app/main/default/objects/InSituCah__Ultimate_Parent__c/fields/InSituCah__ParentIDFieldName__c.field-meta.xml
<CustomField>
    <fullName>InSituCah__ParentIDFieldName__c</fullName>
    <label>ParentIDFieldName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>