force-app/main/default/objects/InSituCah__Ultimate_Parent__c/fields/InSituCah__ToBeDeleted__c.field-meta.xml
<CustomField>
    <fullName>InSituCah__ToBeDeleted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ToBeDeleted</label>
    <type>Checkbox</type>
</CustomField>