force-app/main/default/objects/InSituCah__Ultimate_Parent__c/listViews/InSituCah__All.listView-meta.xml
<ListView>
    <fullName>InSituCah__All</fullName>
    <columns>NAME</columns>
    <columns>InSituCah__Account__c</columns>
    <columns>InSituCah__ParentIDFieldName__c</columns>
    <columns>InSituCah__Recalc__c</columns>
    <columns>InSituCah__ToBeDeleted__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>